updated solution to problem from homework

--- a/Lecture03/L3_01_My-first-CSS-Document/Solution/index.html
+++ b/Lecture03/L3_01_My-first-CSS-Document/Solution/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My First CSS Document</title>
-    <script src="styles.css"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 <h1>Title Level 1</h1>
