--- a/Lecture03/L3_04_Buttons-css/Solution/index.html
+++ b/Lecture03/L3_04_Buttons-css/Solution/index.html
@@ -11,14 +11,19 @@
 </head>
 <body>
 <h2>Normal Buttons</h2>
-<a href="#" >Learn More</a>
-<button>Learn More</button>
+
+<a href="#" class="button">Learn More</a>
+<input type="button" value="Learn More">
 <button class="hover">Learn More</button>
+
 <h2>Filled Buttons</h2>
+
 <a href="#" class="fill">Learn More</a>
 <button class="fill">Learn More</button>
 <button class="fill" class="hover">Learn More</button>
+
 <h2>Icon Buttons</h2>
+
 <a href="#" class="fill"><i class="fas fa-arrow-down"></i>Download</a>
 <button class="fill"><i class="fas fa-arrow-down"></i>Download</button>
 <button class="fill" class="hover"><i class="fas fa-arrow-down"></i>Download</button>
