--- a/Lecture03/L3_04_Buttons-css/Solution/index.html
+++ b/Lecture03/L3_04_Buttons-css/Solution/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Buttons CSS</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 
 </head>
@@ -18,14 +16,14 @@
 
 <h2>Filled Buttons</h2>
 
-<a href="#" class="fill">Learn More</a>
+<a href="#" class="button fill">Learn More</a>
 <button class="fill">Learn More</button>
-<button class="fill" class="hover">Learn More</button>
+<button class="fill hover">Learn More</button>
 
 <h2>Icon Buttons</h2>
 
 <a href="#" class="fill"><i class="fas fa-arrow-down"></i>Download</a>
 <button class="fill"><i class="fas fa-arrow-down"></i>Download</button>
-<button class="fill" class="hover"><i class="fas fa-arrow-down"></i>Download</button>
+<button class="fill hover"><i class="fas fa-arrow-down"></i>Download</button>
 </body>
 </html>
