--- a/Lecture03/L3_06_Icon-font-list/Solution/index.html
+++ b/Lecture03/L3_06_Icon-font-list/Solution/index.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
 
     <title>Icon Fonts - Lists</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
-<ul>
-    <li class="fas fa-check"> Phasellus dictum interdum efficitur<br></li>
-    <li class="fas fa-check"> Maecenas eleifend sapien felis, quis interdum ex tempor a<br></li>
-    <li class="fas fa-check"> Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam</li>
+<ul class="icons">
+    <li><i class="fas fa-check"></i> Phasellus dictum interdum efficitur</li>
+    <li><i class="fas fa-check"></i> Maecenas eleifend sapien felis, quis interdum ex tempor a</li>
+    <li><i class="fas fa-check"></i> Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam</li>
 </ul>
-<ul>
-    <li class="fas fa-star"> Phasellus dictum interdum efficitur<br></li>
-    <li class="fas fa-star"> Maecenas eleifend sapien felis, quis interdum ex tempor a<br></li>
-    <li class="fas fa-star"> Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam</li>
+<ul class="icons">
+    <li><i class="fas fa-star"></i> Phasellus dictum interdum efficitur</li>
+    <li><i class="fas fa-star"></i> Maecenas eleifend sapien felis, quis interdum ex tempor a</li>
+    <li><i class="fas fa-star"></i> Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam</li>
 </ul>
-<ul>
-    <li class="fas fa-envelope"> konstantin.dankov@gmail.com<br></li>
-    <li class="fab fa-twitter"> kdankov<br></li>
-    <li class="fab fa-linkedin"> Konstantin Dankov<br></li>
+<ul class="icons">
+    <li><i class="fas fa-envelope"></i> konstantin.dankov@gmail.com</li>
+    <li><i class="fab fa-twitter"></i> kdankov</li>
+    <li><i class="fab fa-linkedin"></i> Konstantin Dankov</li>
 </ul>
 </body>
 </html>
