updated solutions to css homework

--- a/Lecture04/L4_04_Blog-layout-inline-block/Solution/index.html
+++ b/Lecture04/L4_04_Blog-layout-inline-block/Solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Article Page</title>
+    <title>Blog Layout Inline Block</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -49,8 +49,17 @@
 
         <img src="../Requirements-and-Resources/Images/picture.jpg" alt="some buildings"/></section>
 
+    <p>13 March 2018</p>
+    <aside>
+        <h1>Latest Post</h1>
+        <ul type="square">
+            <li><a href="#">Aliquam erat volutpat</a></li>
+            <li><a href="#">Donec sodales malesuada purus, a gravida ipsum molestie ac</a></li>
+            <li><a href="#">Donec ac luctus leo, eget lobortis sapien</a></li>
+        </ul>
+    </aside>
     <footer>
-        <p>13 March 2018</p>
+        <p>Blog layout &copy All rights reserved</p>
     </footer>
 </article>
 </body>
