updates to css hw

--- a/Lecture04/L4_02_Navigation-inline-block/Solution/index.html
+++ b/Lecture04/L4_02_Navigation-inline-block/Solution/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1><span class="site-title">SITE TITLE</span></h1>
+    <h1 class="site-title">SITE TITLE</h1>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
