updated solutions to css hw

--- a/Lecture04/L4_03_Photo-gallery-inline-block/Solution/index.html
+++ b/Lecture04/L4_03_Photo-gallery-inline-block/Solution/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 <ul class="gallery">
-    <li><img src="../Requirements-and-Resources/Images/picture1.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture2.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture3.jpg" height="450" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture4.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture5.jpg" height="450" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture6.jpg" height="951" width="634"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture1.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture2.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture3.jpg" height="450" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture4.jpg" height="200" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture5.jpg" height="450" width="300"/></li>
-    <li><img src="../Requirements-and-Resources/Images/picture6.jpg" height="951" width="634"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture1.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture2.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture3.jpg" height="450" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture4.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture5.jpg" height="450" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture6.jpg" height="951" width="634" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture1.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture2.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture3.jpg" height="450" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture4.jpg" height="200" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture5.jpg" height="450" width="300" alt="sample-img"/></li>
+    <li><img src="../Requirements-and-Resources/Images/picture6.jpg" height="951" width="634" alt="sample-img"/></li>
 </ul>
 </body>
 </html>
