--- a/Lecture05/L5_01_Article-with-quotes-and-media/Solution/index.html
+++ b/Lecture05/L5_01_Article-with-quotes-and-media/Solution/index.html
@@ -41,16 +41,20 @@
         sit amet est vitae mi porttitor rhoncus sed nec neque. Praesent metus quam, sagittis eu mauris a, pellentesque
         suscipit justo. In varius tortor a ante feugiat, quis finibus magna blandit.</p>
 
+    <blockquote>
+        <aside>
+            <p>Proin sit amet est vitae mi porttitor rhoncus sed nec neque. Praesent metus quam, sagittis eu mauris a,
+                pellentesque suscipit justo. In varius tortor a ante feugiat, quis finibus magna blandit.</p>
+            <p>Author Name</p>
+        </aside>
+    </blockquote>
 
     <p>Phasellus dictum interdum efficitur. Maecenas eleifend sapien felis, quis interdum ex tempor a. Aenean sodales,
         eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam. Aenean ac leo vel ante
         sollicitudin consequat in ut augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
         cubilia Curae; Duis sodales odio diam. Phasellus ultricies faucibus massa sit amet pharetra.</p>
 
-    <blockquote>
-        <p>Proin sit amet est vitae mi porttitor rhoncus sed nec neque. Praesent metus quam, sagittis eu mauris a, pellentesque suscipit justo. In varius tortor a ante feugiat, quis finibus magna blandit.</p>
-        <p>Author Name</p>
-    </blockquote>
+
 
     <p>Sed fermentum viverra tortor ut lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada
         fames ac turpis egestas. Duis eleifend ut ligula quis lacinia. Ut sit amet est quis ipsum tristique suscipit ac
