--- a/Lecture05/L5_05_Floating-images-and-quotes/Solution/index.html
+++ b/Lecture05/L5_05_Floating-images-and-quotes/Solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog Layout - Float</title>
+    <title>Floating Images and Quotes</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
