--- a/Lecture05/L5_04_Center-position-and-transform/Solution/index.html
+++ b/Lecture05/L5_04_Center-position-and-transform/Solution/index.html
@@ -14,7 +14,7 @@
                 <img src="../../L5_03_Position-playground/Requirements-and-Resources/images/picture1.jpg" height="333"
                      width="500"/>
                 <div class="text">
-                    <p class="title">Card Title</p>
+                    <h1 class="title">Card Title</h1>
                     <p>Short description of what this is all about - crafted to make people interested</p>
                     <button>See More</button>
                 </div>
