added solutions to flex hw

--- a/Lecture06/L6_04_BoxModel-Calendar/Solution/index.html
+++ b/Lecture06/L6_04_BoxModel-Calendar/Solution/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <section class="week"></section>
+    <section class="week">
     <span>test</span>
     <span>test</span>
     <span>test</span>
@@ -18,7 +18,7 @@
     <span>test</span>
     <span>test</span>
     <span>test</span>
-
+    </section>
     <section class="notes">
         <span>test</span>
         <span>test</span>
