added solution to problem 1

--- a/Lecture07/L7_01_Input-addon-flexbox/Solution/index.html
+++ b/Lecture07/L7_01_Input-addon-flexbox/Solution/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Input Addon - Flexbox</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<form>
+    <fieldset class = "search">
+        <legend>Login:</legend>
+        Username<br>
 
+        <i class="fas fa-user"></i>
+        <input name="username" type="text"><br>
+
+        <i class="fas fa-key"></i>
+        <input name="username" type="text"><br>
+        <input type="submit" value="Login" />
+    </fieldset>
+</form>
 </body>
 </html>
