--- a/Lecture07/L7_03_Customer-details-form/Solution/index.html
+++ b/Lecture07/L7_03_Customer-details-form/Solution/index.html
@@ -6,34 +6,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<form>
+<div class="body">
     <h2>Customer Details</h2>
-
-    First Name
-    <input type="text" placeholder="George">
-    Last Name
-    <input type="text" placeholder="Devis">
-    Gender
-    <input class="male" type="radio" name="gender" value="male" checked> Male
-    <input class="female" type="radio" name="gender" value="female"> Female
-    Email
-    <input type="email" placeholder="your@email.com">
-    Phone
-    <input type="text" placeholder="+1234567890">
-    Town
-    <input type="text" placeholder="Varna">
-    Age
-    <input type="text" placeholder="">
-    Language
-    <input type="text" placeholder="">
-    Message
-    <input type="text" placeholder="George">
-    <textarea rows="5" cols="35" placeholder="More information...">
-
-</textarea>
-    <input type="checkbox" name="vehicle" value="I agree with the terms and conditions"> I agree with the terms and conditions
-
-    <input type="button" value="Send">
-</form>
+    <form>
+        <div class="container1">
+            <span>Option</span>
+            <span>Option</span>
+            <span>Option</span>
+            <span>Option</span>
+            <span>Option</span>
+            <span>Option</span>
+        </div>
+        <div class="container2">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+        </div>
+    </form>
+    <input type="submit" value="Send" class="sendbtn">
+</div>
 </body>
 </html>
