added 2nd solution to 1st exam

--- a/Exams/exam01/02_Vienna/index.html
+++ b/Exams/exam01/02_Vienna/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
           integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="Solution/responsive.css">
+
 </head>
 <body>
 <header>
@@ -21,7 +22,6 @@
 
         <ul>
             <li><i class="fas fa-globe-asia"></i> Language <i class="fas fa-arrow-down"></i></li>
-
         </ul>
     </nav>
 
