started adding solution to the 4th problem of the 1st exam

--- a/Exams/exam01/04_Budapest/Solutions/index.html
+++ b/Exams/exam01/04_Budapest/Solutions/index.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+    <nav class="main-navigation">
+        <span><i class="fas fa-search"></i>Search</span>
+        <span><i class="far fa-user"></i>Login Registration</span>
+        <span><i class="fas fa-shopping-cart"></i>Shopping List</span>
+        <span><i class="fas fa-globe"></i>Language</span>
+    </nav>
+    <nav class="sub-navigation">
+        <span>Budapest</span>
+        <span>Info</span>
+        <span>Budapest Card</span>
+        <span>Places</span>
+        <span>Sights</span>
+        <span>Events</span>
+    </nav>
+</header>
+<main>
+    <div class="background-image"></div>
+    <div class="budapest-card">
+        <span class="title">BUDAPEST CARD</span>
+        <p>Enjoy the top attractions Feel the atmosphere of historic baths</p>
+        <p>Taste traditional Hungarian cuisine Experience off-the-beaten-
+            <br>track</p>
+        <p>Taste traditional Hungarian cuisine Experience off-the-beaten-
+            <br>track programmes and sights</p>
+        <p>Travel around the city for free</p>
+        <p>Create your own unique experiences</p>
 
+        <input type="submit" class="button" value="BUY NOW">
+    </div>
+    <div class="circles">
+
+    </div>
+</main>
 </body>
 </html>
