finished problem 4 of 1st exam (imperfect)

--- a/Exams/exam01/04_Budapest/Solutions/index.html
+++ b/Exams/exam01/04_Budapest/Solutions/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Budapest Travel</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,24 +21,64 @@
         <span>Sights</span>
         <span>Events</span>
     </nav>
+    <div class="logo">
+        <img src="../img/logo.png" height="105" width="155" alt="logo"/></div>
 </header>
 <main>
     <div class="background-image"></div>
+
+    <div class="shuttle-info">
+        <h2>SHUTTLE</h2>
+        <p>Travel by Funicular – Chairlift Shuttle between Buda <br>Castle and Zugliget! The Shuttle runs and waits for the<br>
+            passengers every day on the long weekend between <br> 20-23 October, 2018.</p>
+        <input type="submit" class="button" value="READ MORE">
+    </div>
+
     <div class="budapest-card">
         <span class="title">BUDAPEST CARD</span>
-        <p>Enjoy the top attractions Feel the atmosphere of historic baths</p>
-        <p>Taste traditional Hungarian cuisine Experience off-the-beaten-
+        <p><i class="far fa-hand-point-right"></i> Enjoy the top attractions Feel the atmosphere of historic baths</p>
+        <p><i class="far fa-hand-point-right"></i> Taste traditional Hungarian cuisine Experience off-the-beaten-
             <br>track</p>
-        <p>Taste traditional Hungarian cuisine Experience off-the-beaten-
+        <p><i class="far fa-hand-point-right"></i> Taste traditional Hungarian cuisine Experience off-the-beaten-
             <br>track programmes and sights</p>
-        <p>Travel around the city for free</p>
-        <p>Create your own unique experiences</p>
+        <p><i class="far fa-hand-point-right"></i> Travel around the city for free</p>
+        <p><i class="far fa-hand-point-right"></i> Create your own unique experiences</p>
 
         <input type="submit" class="button" value="BUY NOW">
     </div>
     <div class="circles">
+        <p>BUDAPEST CARD - GET THE MOST OUT OF YOUR<br> STAY!</p>
+        <p>See more. Save more.</p>
 
+        <div class="pics">
+            <img src="../img/museums.jpg" height="190" width="190" alt="museums"/>
+            <img src="../img/services.jpg" height="190" width="190" alt="services"/>
+            <img src="../img/tours.jpg" height="190" width="190" alt="tours"/>
+            <img src="../img/transport.jpg" height="190" width="190" alt="transport"/>
+            <img src="../img/entry.jpg" height="190" width="190" alt="entry"/>
+        </div>
+        <div class="captions">
+            <span>FREE PUBLIC TRANSPORT</span>
+
+            <span>FREE BUDA & PEST<br> WALKING TOURS</span>
+
+            <span>17 MUSEUMS WITH NO <br>ENTRY FEES</span>
+
+            <span>FREE SERVICES</span>
+
+            <span>FREE ENTRY TO 30+ TOP<br> BUDAPEST ATTRACTIONS</span>
+        </div>
+    </div>
+    <div class="newsletter">
+        <div class="newsletterleft">
+            <span>NEWSLETTER</span><br>
+            <span>Subscribe to the Budapest Newsletter</span>
+        </div>
+        <input type="submit" class="newsletterbtn" value="SUBSCRIBE">
     </div>
 </main>
+<footer>
+    <p>Copyright &#169 2018 - All rights reserved.</p>
+</footer>
 </body>
 </html>
