minor changes to instructions file

--- a/Exams/exam01/04_Budapest/Solutions/index.html
+++ b/Exams/exam01/04_Budapest/Solutions/index.html
@@ -34,7 +34,7 @@
         <input type="submit" class="button" value="READ MORE">
     </div>
 
-    <div class="budapest-card">
+    <section class="budapest-card">
         <span class="title">BUDAPEST CARD</span>
         <p><i class="far fa-hand-point-right"></i> Enjoy the top attractions Feel the atmosphere of historic baths</p>
         <p><i class="far fa-hand-point-right"></i> Taste traditional Hungarian cuisine Experience off-the-beaten-
@@ -45,7 +45,7 @@
         <p><i class="far fa-hand-point-right"></i> Create your own unique experiences</p>
 
         <input type="submit" class="button" value="BUY NOW">
-    </div>
+    </section>
     <div class="circles">
         <p>BUDAPEST CARD - GET THE MOST OUT OF YOUR<br> STAY!</p>
         <p>See more. Save more.</p>
