finished 3 problem of exam 2

--- a/Exams/exam02/03. Sign-Up/index.html
+++ b/Exams/exam02/03. Sign-Up/index.html
@@ -8,7 +8,20 @@
 <body>
 <div class="container">
     <div class="image">
-        <img src="images/cover.jpg" height="177" width="284" alt="hacker"/></div>
+        <img src="images/cover.jpg" height="177" width="284" alt="hacker"/>
+        <div class="overlay">
+        </div>
+        <section class="centered-text">
+            <p>Welcome to SoftUni.</p>
+            <p>Are you ready to become a dev?</p>
+        </section>
+        <p class="softuni">SoftUni</p>
+        <section class="icons">
+            <i class="fas fa-globe"></i>
+            <i class="fab fa-github"></i>
+            <i class="fab fa-twitter"></i>
+        </section>
+    </div>
     <div class="login-form">
         <form>
             <label for="username"><span>USERNAME</span><br>
