added some imgs

--- a/mySite/index.html
+++ b/mySite/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+    <button type="button" class="btn-home">Home</button>
+    <button type="button" class="btn-galley">Gallery</button>
+    <button type="button" class="btn-contact">Contact Me</button>
+</header>
+<main>
+    <section>
 
+    </section>
+</main>
+<footer>
+    <section class="social-links">
+
+    </section>
+</footer>
 </body>
 </html>
