--- a/mySite/index.html
+++ b/mySite/index.html
@@ -7,13 +7,22 @@
 </head>
 <body>
 <header>
-    <button type="button" class="btn-home">Home</button>
-    <button type="button" class="btn-galley">Gallery</button>
-    <button type="button" class="btn-contact">Contact Me</button>
+    <ul class="btns-header">
+        <li>
+            <span>Home</span>
+        </li>
+        <li>
+            <span>Gallery</span>
+        </li>
+        <li>
+            <span>Contact Me</span>
+        </li>
+    </ul>
+
 </header>
 <main>
-    <section>
-
+    <section class="center-image">
+        <img src="images/debby-hudson-544846-unsplash.jpg" height="2650" width="4000" alt="paintbrushes"/>
     </section>
 </main>
 <footer>
